[project]
name = "show-tracker"
version = "1.0.0"
description = "影视追踪自动化工具 - 字幕组与观影社群批量整理新片资料"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
show-tracker = "show_tracker.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["show_tracker*"]

[tool.setuptools.package-data]
show_tracker = ["*.py"]
